php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46604 ReflectionClass::getProperty() fails
Submitted: 2008-11-18 15:49 UTC Modified: 2008-11-21 23:33 UTC
From: ant@php.net Assigned:
Status: Closed Package: Reflection related
PHP Version: 6CVS-2008-11-18 (snap) OS: Windows/Linux
Private report: No CVE-ID: None
 [2008-11-18 15:49 UTC] ant@php.net
Description:
------------
ReflectionClass::getProperty() returns a NULL on PHP 6 - it works as 
expected on PHP 5.3 and 5.2.6. There are some tests now checked into 
CVS that show the unexpected behaviour:

ext/reflection/tests/ReflectionClass_getProperty_001.phpt
ext/reflection/tests/ReflectionClass_getProperty_003.phpt
ext/reflection/tests/ReflectionClass_getProperty_004.phpt

These tests have been marked with an --XFAIL-- section so they should 
show up as expected failures.

Reproduce code:
---------------
See the following tests  in CVS:

ext/reflection/tests/ReflectionClass_getProperty_001.phpt
ext/reflection/tests/ReflectionClass_getProperty_003.phpt
ext/reflection/tests/ReflectionClass_getProperty_004.phpt

Expected result:
----------------
083- --> Check for a: Property a does not exist

Actual result:
--------------
083+ --> Check for a: NULL

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-11-21 23:33 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks!
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 09:00:01 2026 UTC