- Fixed bug #46604 (ReflectionClass::getProperty() fails) [only in this branch]